--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -9,6 +9,16 @@
       <th>Description</th>
       <th>Image</th>
       <th>Price</th>
+      <%#:status, :license_plate, :model, :manufactor, style, :location %>
+
+      <th>Status</th>
+      <th>License_plate</th>
+      <th>Model</th>
+      <th>Manufactor</th>
+      <th>Style</th>
+      <th>Location</th>
+
+      <%#:status, :license_plate, :model, :manufactor, style, :location %>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +30,16 @@
         <td><%= truncate(strip_tags(car.description), :length => 100) %></td>
         <td><%= image_tag(car.image_url, :class =>'list_image', :size => '150x100') %></td>
         <td><%= car.price %></td>
+
+        <%#:status, :license_plate, :model, :manufactor, style, :location %>
+        <td><%= car.status %></td>
+        <td><%= car.license_plate %></td>
+        <td><%= car.model %></td>
+        <td><%= car.manufactor %></td>
+        <td><%= car.style %></td>
+        <td><%= car.location %></td>
+        <%#:status, :license_plate, :model, :manufactor, style, :location %>
+
         <td><%= link_to 'Show', car %></td>
         <td><%= link_to 'Edit', edit_car_path(car) %></td>
         <td><%= link_to 'Destroy', car, method: :delete, data: { confirm: 'Are you sure?' } %></td>
