add order link and checkout button

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
     <div id="side">
       <a href="http://localhost:3000">Home</a><br />
       <a href="http://localhost:3000/reservations">Reservations</a><br />
+      <a href="http://localhost:3000/orders">Orders</a><br />
       <a href="http://localhost:3000/signup">signup</a><br />
       <a href="http://localhost:3000/login">login</a><br />
       <%= link_to "Profile", current_user%><br/>
