--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -12,26 +12,11 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name, id: :order_name %>
-  </div>
-
-  <div class="field">
-    <%= form.label :address %>
-    <%= form.text_area :address, id: :order_address %>
-  </div>
-
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email, id: :order_email %>
-  </div>
-
-  <div class="field">
     <%= form.label :pay_type %>
     <%= form.select :pay_type, Order::PAYMENT_TYPES, id: :order_pay_type %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "Confirm Order"%>
   </div>
 <% end %>
