--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -1,11 +1,23 @@
 <h1>Cars list</h1>
 <p id="notice"><%= notice %></p>
 
+
+<%##Search cars using location or model or manufacturer or style or status%>
 <%= form_tag(store_path, :method => "get", id: "search-form") do %>
-    <%= text_field_tag :search1, params[:search1], placeholder: "Search Style" %>
-    <%= text_field_tag :search2, params[:search2], placeholder: "Search Model" %>
+    <%= 'Locatoin ' %><%= select_tag :search1, options_from_collection_for_select(Car.all.to_a.uniq{ |o| o.location}, :location, :location), {:class => 'form-control', :prompt => ''} %>
+    <%= 'Model ' %><%= select_tag :search2, options_from_collection_for_select(Car.all.to_a.uniq{ |o| o.model}, :model, :model), {:class => 'form-control', :prompt => ''} %>
+    <%= 'Manufactor ' %><%= select_tag :search3, options_from_collection_for_select(Car.all.to_a.uniq{ |o| o.manufactor}, :manufactor, :manufactor), {:class => 'form-control', :prompt => ''} %>
+    <%# <%= 'Model ' %><%#<%= text_field_tag :search2, params[:search2], placeholder: "Search Model" %>
+    <%= 'Style ' %><%= select_tag :search4, options_for_select(["Coupe", "Sedan", "SUV"]), {:class => 'form-control', :prompt => ''} %>
+    <%= 'Status ' %><%= select_tag :search5, options_for_select(["available", "reserved", "checkedout"]), {:class => 'form-control', :prompt => ''} %>
+    <%#<%= form_tag.select :pay_type, params[:search5] %>
+    <%#select_tag "people", options_from_collection_for_select(@people, "id", "name"), include_blank: true%>
     <%= submit_tag "Search", :name => nil %>
 <% end %>
+
+
+<%#<%= form.select :pay_type, Order::PAYMENT_TYPES, id: :order_pay_type %>
+
 
 <% @cars.each do |car| %>
     <div class="entry">
@@ -15,7 +27,7 @@
       <div class="price_line">
         <span class="price"><%= car.price %></span>
 
-        <%= button_to 'Reserve', new_reservation_path(:car_id => car.id), :method => :post  %>
+        <%= button_to 'Reserve', new_reservation_path(:car_id => car.id), :method => :post %>
 
         <%#<%= button_to 'Reservation', reservations_path(:car_id=>car) %>
         <%#<%= button_to 'Reservation', line_items_path(:car_id=>car) %>
@@ -27,4 +39,4 @@
     </div>
 <% end %>
 
-<%= button_to "Log out", logout_path, :method=> :delete %>
+<%= button_to "Log out", logout_path, :method => :delete %>
