modify new order

--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -4,9 +4,9 @@
 
 <%##Search cars using location or model or manufacturer or style or status%>
 <%= form_tag(store_path, :method => "get", id: "search-form") do %>
-    <%= 'Locatoin ' %><%= select_tag :search1, options_from_collection_for_select(Car.all.to_a.uniq{ |o| o.location}, :location, :location), {:class => 'form-control', :prompt => ''} %>
-    <%= 'Model ' %><%= select_tag :search2, options_from_collection_for_select(Car.all.to_a.uniq{ |o| o.model}, :model, :model), {:class => 'form-control', :prompt => ''} %>
-    <%= 'Manufactor ' %><%= select_tag :search3, options_from_collection_for_select(Car.all.to_a.uniq{ |o| o.manufactor}, :manufactor, :manufactor), {:class => 'form-control', :prompt => ''} %>
+    <%= 'Locatoin ' %><%= select_tag :search1, options_from_collection_for_select(Car.all.to_a.uniq {|o| o.location}, :location, :location), {:class => 'form-control', :prompt => ''} %>
+    <%= 'Model ' %><%= select_tag :search2, options_from_collection_for_select(Car.all.to_a.uniq {|o| o.model}, :model, :model), {:class => 'form-control', :prompt => ''} %>
+    <%= 'Manufactor ' %><%= select_tag :search3, options_from_collection_for_select(Car.all.to_a.uniq {|o| o.manufactor}, :manufactor, :manufactor), {:class => 'form-control', :prompt => ''} %>
     <%# <%= 'Model ' %><%#<%= text_field_tag :search2, params[:search2], placeholder: "Search Model" %>
     <%= 'Style ' %><%= select_tag :search4, options_for_select(["Coupe", "Sedan", "SUV"]), {:class => 'form-control', :prompt => ''} %>
     <%= 'Status ' %><%= select_tag :search5, options_for_select(["available", "reserved", "checkedout"]), {:class => 'form-control', :prompt => ''} %>
@@ -26,9 +26,9 @@
       <%= sanitize(car.description) %>
       <div class="price_line">
         <span class="price"><%= car.price %></span>
-
-        <%= button_to 'Reserve', new_reservation_path(:car_id => car.id), :method => :post %>
-
+        <% if car.status == 'available' %>
+            <%= button_to 'Reserve', new_reservation_path(:car_id => car.id), :method => :post %>
+        <% end %>
         <%#<%= button_to 'Reservation', reservations_path(:car_id=>car) %>
         <%#<%= button_to 'Reservation', line_items_path(:car_id=>car) %>
         <%#<td><%= button_to '+', {:controller => "votes", :action => "create", :car_id => car.id, :user_id=> session[:user_id]} , :method=>:post  %></td>
