--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,22 +1,28 @@
 <%= form_with(model: order, local: true) do |form| %>
-  <% if order.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
+    <% if order.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
 
-      <ul>
-      <% order.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% order.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+
+    <div class="field">
+      <%= form.label :reservation_id %>
+      <%= form.text_field :reservation_id, id: :reservation_id, :readonly => true %>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :pay_type %>
-    <%= form.select :pay_type, Order::PAYMENT_TYPES, id: :order_pay_type %>
-  </div>
+    <div class="field">
+      <%= form.label :pay_type %>
+      <%= form.select :pay_type, Order::PAYMENT_TYPES, id: :order_pay_type %>
+    </div>
 
-  <div class="actions">
-    <%= form.submit "Confirm Order"%>
-  </div>
+    <div class="actions">
+      <%= form.submit "Confirm Order" %>
+    </div>
 <% end %>
