--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -12,13 +12,12 @@
   <% end %>
 
     <div class="field">
-      <%= form.label :car_id %>
-      <%= form.text_field :car_id, id: :car_id, :readonly =>true %>
+      <%= form.hidden_field :car_id, id: :car_id, :readonly =>true  %>
     </div>
 
     <div class="field">
       <%= form.label :checkout_time %>
-      <%= form.datetime_select :checkout_time, id: :checkout_time %>
+      <%= form.datetime_select :checkout_time, id: :checkout_time, :default => { :hour => (Time.now.hour+1)%24, :minute => 0 }%>
     </div>
 
 
