--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -53,7 +53,23 @@
   <%= @car.location %>
 </p>
 
-
-
 <%= link_to 'Edit', edit_car_path(@car) %> |
 <%= link_to 'Back', cars_path %>
+
+
+<h1>Rental History: </h1>
+<table>
+  <tbody>
+  <% @orders.each do |order| %>
+      <tr>
+        <td><%= order.id %></td>
+        <td><%= order.reservation_id %></td>
+        <td><%= order.created_at %></td>
+        <td><%= order.name %></td>
+        <td><%= order.pay_type %></td>
+        <td><%= order.status %></td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
+
