--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Car_id:</strong>
+  <%= @order.car_id %>
+</p>
+
+<p>
   <strong>Address:</strong>
   <%= @order.address %>
 </p>
