--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -9,6 +9,7 @@
       <th>Address</th>
       <th>Email</th>
       <th>Pay type</th>
+      <th>Car id</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -20,6 +21,7 @@
         <td><%= order.address %></td>
         <td><%= order.email %></td>
         <td><%= order.pay_type %></td>
+        <td><%= order.car_id %></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -30,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Order', new_order_path %>
+<%= button_to 'New Order', new_order_path %>
