--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -12,6 +12,28 @@
     <% end %>
 
     <%if @order.reservation_id == 2500%>
+        <div class="field">
+          <%= form.label :real_checkout_time %>
+          <%= form.datetime_select :real_checkout_time, id: :order_real_checkout_time, :default => { :hour => Time.now.hour, :minute => Time.now.min }%>
+        </div>
+    <%end%>
+
+    <%if @order.reservation_id == 2500%>
+        <div class="field">
+          <%= form.label :rental_period %>
+          <%= form.select :return_time,  options_for_select([1,2,3,4,5,6,7,8,9,10],1), {:class => 'form-control', :prompt => ''}  %>
+          <%= form.label :hours %>
+        </div>
+    <%end%>
+
+    <%if @order.reservation_id == 2500%>
+        <div class="field">
+          <%= form.label :tel %>
+          <%= form.text_field :tel, id: :order_tel %>
+        </div>
+    <%end%>
+
+    <%if @order.reservation_id == 2500%>
     <div class="field">
       <%= form.label :name %>
       <%= form.text_field :name, id: :order_id %>
