--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -28,9 +28,11 @@
         <span class="price"><%= car.price %></span>
         <% if car.status == 'available' %>
             <%if logged_in?%>
-            <%= button_to 'Reserve', new_reservation_path(:car_id => car.id), :method => :post %>
-                <%else%>
-            <%= link_to 'Reserve', login_path%>
+                <%= button_to 'Reserve', new_reservation_path(:car_id => car.id), :method => :post %>
+                <%= button_to 'Checkout', new_order_path(:car_id => car.id), :method => :post %>
+            <%else%>
+                <%= link_to 'Reserve', login_path%>
+                <%= link_to 'Checkout', login_path%>
                 <%end%>
         <% end %>
         <%#<%= button_to 'Reservation', reservations_path(:car_id=>car) %>
