--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -10,6 +10,7 @@
       <th>Email</th>
       <th>Pay type</th>
       <th>Car id</th>
+      <th>Status</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -22,9 +23,15 @@
         <td><%= order.email %></td>
         <td><%= order.pay_type %></td>
         <td><%= order.car_id %></td>
+        <td><%= order.status%></td>
         <td><%= link_to 'Show', order %></td>
         <td><%= link_to 'Edit', edit_order_path(order) %></td>
         <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%#<td>
+          <<% if order.status == 'checked out'%>
+              <%# <%= button_to 'Return', order, method: :delete, data: { confirm: 'Are you sure?' } %>
+         <%# <% end %>
+          <%#</td>%>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +39,3 @@
 
 <br>
 
-<%= button_to 'New Order', new_order_path %>
