--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,11 +14,14 @@
   </div>
   <div id="columns">
     <div id="side">
-      <a href="http://localhost:3000">Home</a><br />
-      <a href="http://localhost:3000/reservations">Reservations</a><br />
-      <a href="http://localhost:3000/orders">Orders</a><br />
-      <a href="http://localhost:3000/signup">signup</a><br />
-      <a href="http://localhost:3000/login">login</a><br />
+      <%=link_to "Home", store_index_path%><br />
+      <%=link_to "Sign up", signup_path%><br />
+      <%=link_to "login", login_path%><br />
+      <%= link_to "Cars", cars_path%><br/>
+      <%= link_to "Reservations", reservations_path%><br/>
+      <%= link_to "Orders", orders_path%><br/>
+
+
       <%= link_to "Profile", current_user%><br/>
       <%= button_to "Log out", logout_path, :method=> :delete %><br/>
 
