--- a/app/views/adminl/index.html.erb
+++ b/app/views/adminl/index.html.erb
@@ -1,17 +1,27 @@
-<% provide(:title, 'All admin') %>
+
 <h1>All admins</h1>
 
-<ul class="users">
+<table>
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>email</th>
+    <th colspan ="2"></th>
+  </tr>
+  </thead>
+  <tbody>
   <% @users.each do |user| %>
-      <li>
+      <tr>
 
-        <%= link_to user.name%>
-        <%= link_to user.email%>
-            <%=link_to "edit",edit_user_path(user)%>
-            <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
+        <td><%=user.name%></td>
+        <td><%=user.email%></td>
+        <td><%=link_to "edit",edit_user_path(user)%></td>
+            <%if !current_user?(user)%>
+
+            <td><%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %></td>
+            <%end%>
             <%=yield%>
         <% end %>
-
-      </li>
-
-</ul>
+        </tr>
+  </tbody>
+</table>
