--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,31 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
 
-<ul class="users">
+<table>
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Email</th>
+    <th colspan="3"></th>
+  </tr>
+  </thead>
+
+<tbody>
+
   <% @users.each do |user| %>
-      <li>
-        <%= link_to user.name%>
-        <%= link_to user.email%>
-        <% if current_user.admin? && !current_user?(user) %>
-            <%=link_to "edit",edit_user_path(user)%>
-            <%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %>
+
+     <tr>
+
+       <td> <%=user.name%></td>
+       <td><%=user.email%></td>
+        <% if current_user.admin?%>
+           <td><%=link_to "show",user_path(user)%></td>
+           <td><%=link_to "edit",edit_user_path(user)%></td>
+           <td><%= link_to "delete", user, method: :delete, data: { confirm: "You sure?" } %></td>
         <% end %>
 
-      </li>
+
   <% end %>
-</ul>
+  </tr>
+</tbody>
+</table>
