--- a/app/views/cars/_form.html.erb
+++ b/app/views/cars/_form.html.erb
@@ -15,6 +15,10 @@
       <%= form.label :title %>
       <%= form.text_field :title, id: :car_title %>
     </div>
+    <div class="field">
+      <%= form.label :title %>
+      <%= form.text_field :title, id: :car_title %>
+    </div>
 
     <%#:status, :license_plate, :model, :manufactor, style, :location %>
 
