show checkout history

--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -51,7 +51,7 @@
 
       <%#:status, :license_plate, :model, :manufactor, style, :location %>
 
-      <td><%= link_to 'Show', car %></td>
+      <td><%= link_to 'ShowHistory', car %></td>
       <td><%if logged_in?%></td>
 
 
